--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
             <button id="sendOrderBtn" class="send-button">Send Order</button>
         </div>
     </div>
-
+    <script type="module" src="requester-script.js"></script>
     </body>
 </html>
