--- a/officeboy.html
+++ b/officeboy.html
@@ -15,6 +15,6 @@
             </div>
         </div>
     </div>
-    
+    <script type="module" src="officeboy-script.js"></script>
     </body>
 </html>
