--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 
     <div class="container">
+        <div class="header-bar">
+            <p id="welcome-message">Welcome!</p>
+            <button id="signOutBtn" class="auth-button secondary">Sign Out</button>
+        </div>
         <h1>Factory Orders</h1>
         <p>Create a new request for the office boy.</p>
         
@@ -48,6 +52,7 @@
             <button id="sendOrderBtn" class="send-button">Send Order</button>
         </div>
     </div>
+    
     <script type="module" src="requester-script.js"></script>
-    </body>
+</body>
 </html>
